# ieee_robotics

./: README.md  fire_mission.service  nav2_params.yaml  navigation-strategy.py  package.xml  round-tracker.py  setup.cfg  setup.py  setup_mission_starter.sh  stable_minimal_nav_launch_mark2.py  teensy-bridge-adapter.py  teensy_bridge_mark2.py
arduino_mega_step_code/src/: main.cpp
config/: custom_nav2_params.yaml  ekf.yaml  ekf_debug.yaml  foxy_nav2_params.yaml  global_costmap.yaml  local_costmap.yaml  nav2_params.yaml  optimized_nav2_params.yaml  slam_navigation.yaml  slam_params.yaml  stable_nav_params.yaml
ieee_robotics/: arduino_bridge.py  fire_detection_state_machine.py.py  gpu_image_processor.py  hardwareswitch.py  navigation-strategy-mark2.py  navigation-strategy.py  system_monitor.py  teensy-bridge-adapter.py  teensy_bridge.py  teensy_bridge_mark2.py  teensy_imu_bridge.py  twist_to_motors.py  wheel_odometry.py
launch/: display.launch.py  drive.launch.py  foxy_nav_slam_gpu.launch.py  minimal_nav.launch.py  nav2.launch.py  nav_slam_test_custom.launch.py  nav_slam_test_gpu.launch.py  navigation.launch.py  navigation_slam.launch.py  slam.launch.py  stable_minimal_nav.launch.py
scripts/: fire_mission_starter.py  jetson_gpu_setup.sh  setup_gpio_permissions.sh  xavier_foxy_setup.sh
src/: odometry_publisher.py
teensy_imu_ir/: platformio.ini
teensy_imu_ir/src/: main.cpp
urdf/: robot.urdf
