<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ieee_robotics</name>
  <version>0.0.0</version>
  <description>IEEE Robotics Competition Package</description>
  <maintainer email="grant@todo.todo">grant</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>imu_tools</depend>
  <depend>ros2_control</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_bringup</depend>
  <depend>rplidar_ros</depend>
  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>
  <depend>python3-psutil</depend>
  <depend>cv_bridge</depend>

  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>pyserial</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>